package io.gitlab.plunts.gradle.plantuml.examples.app.entity;

public class SteeringWheel extends AbstractEntity {

}
