@startuml Visualise all Entities
!pragma useIntermediatePackages false

class "Car" as io.gitlab.plunts.gradle.plantuml.examples.app.entity.Car {
  +int getMaxPassengers()
  +List<ParkingSlot> getAllowedParkingSlots()
  +void setMaxPassengers(int)
  +void setAllowedParkingSlots(List<ParkingSlot>)
  +String toString()
  +boolean equals(Object)
  +int hashCode()
}
entity "ParkingSlot" as io.gitlab.plunts.gradle.plantuml.examples.app.entity.ParkingSlot {
  +UUID getId()
  +List<Car> getAllowedCars()
  +Map<String, Object> getFoobar()
  +void setId(UUID)
  +void setAllowedCars(List<Car>)
  +void setFoobar(Map<String, Object>)
  +String toString()
  +boolean equals(Object)
  +int hashCode()
}
entity "Passenger" as io.gitlab.plunts.gradle.plantuml.examples.app.entity.Passenger {
  +String getName()
  +void setName(String)
  +String toString()
  +boolean equals(Object)
  +int hashCode()
}
class "SteeringWheel" as io.gitlab.plunts.gradle.plantuml.examples.app.entity.SteeringWheel {
}
entity "Tire" as io.gitlab.plunts.gradle.plantuml.examples.app.entity.Tire {
  + {static}int DEFAULT_RADIUS
  __
  +int getDiameter()
  +Vehicle getMountedTo()
  +void setDiameter(int)
  +void setMountedTo(Vehicle)
  +String toString()
  +boolean equals(Object)
  +int hashCode()
}
class "Trip" as io.gitlab.plunts.gradle.plantuml.examples.app.entity.Trip {
  +Instant getStartTime()
  +Instant getEndTime()
  +void setStartTime(Instant)
  +void setEndTime(Instant)
  +boolean equals(Object)
  +int hashCode()
  +String toString()
}
entity "Truck" as io.gitlab.plunts.gradle.plantuml.examples.app.entity.Truck {
  +int getMaxLoad()
  +void setMaxLoad(int)
  +String toString()
  +boolean equals(Object)
  +int hashCode()
}
entity "Vehicle" as io.gitlab.plunts.gradle.plantuml.examples.app.entity.Vehicle {
  +String getPlateNo()
  +boolean isRegistered()
  +VehicleState getState()
  +List<Tire> getTires()
  +SteeringWheel getSteeringWheel()
  +List<Passenger> getPassengers()
  +List<Trip> getTrips()
  +void setPlateNo(String)
  +void setRegistered(boolean)
  +void setState(VehicleState)
  +void setTires(List<Tire>)
  +void setSteeringWheel(SteeringWheel)
  +void setPassengers(List<Passenger>)
  +void setTrips(List<Trip>)
  +String toString()
  +boolean equals(Object)
  +int hashCode()
}
enum "VehicleState" as io.gitlab.plunts.gradle.plantuml.examples.app.entity.VehicleState {
  NEW
  IN_USE
  BROKEN
  SCRAPPED
  __
  + {static}VehicleState[] values()
  + {static}VehicleState valueOf(String)
  +String toString()
  +String getLabel()
}
io.gitlab.plunts.gradle.plantuml.examples.app.entity.Car -u-|> io.gitlab.plunts.gradle.plantuml.examples.app.entity.Vehicle
io.gitlab.plunts.gradle.plantuml.examples.app.entity.Car "0..*" <--> "0..*" io.gitlab.plunts.gradle.plantuml.examples.app.entity.ParkingSlot
io.gitlab.plunts.gradle.plantuml.examples.app.entity.Truck -u-|> io.gitlab.plunts.gradle.plantuml.examples.app.entity.Vehicle
io.gitlab.plunts.gradle.plantuml.examples.app.entity.Vehicle "1" *--> "0..*" io.gitlab.plunts.gradle.plantuml.examples.app.entity.Trip
io.gitlab.plunts.gradle.plantuml.examples.app.entity.Vehicle "0..1" --> "1" io.gitlab.plunts.gradle.plantuml.examples.app.entity.SteeringWheel
io.gitlab.plunts.gradle.plantuml.examples.app.entity.Vehicle "0..1" o--o "2..100" io.gitlab.plunts.gradle.plantuml.examples.app.entity.Tire
io.gitlab.plunts.gradle.plantuml.examples.app.entity.Vehicle --> "1..*" io.gitlab.plunts.gradle.plantuml.examples.app.entity.VehicleState
io.gitlab.plunts.gradle.plantuml.examples.app.entity.Vehicle "0..1" o--> "1..*" io.gitlab.plunts.gradle.plantuml.examples.app.entity.Passenger
@enduml
